--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,8 +1,38 @@
-<div class="" >
-    <p-card >
-       dsdd
-        
-        
-    </p-card>
-    
+<div class="card-form-login">
+    <div class="block-form-login">
+        <form [formGroup]="loginForm">
+            <p-card header="Sign in" [style]="{width: '500px'}">
+                <div class="field">
+                    <label for="email">Email</label>
+                    <input type="text" 
+                           pInputText 
+                           formControlName="email" 
+                           class="w-full" 
+                           name="email" 
+                           placeholder="Type your email"/>
+                    <small *ngIf="email.invalid && (email.dirty || email.touched)" class="block p-error">
+                        <div  *ngIf="email.errors?.['required']">Email is required.</div>
+                        <div  *ngIf="email.errors?.['email']">Email should be valid</div>
+                    </small>
+                        
+                </div>
+                <div class="field">
+                    <label for="password">Password</label>
+                    <input type="password" 
+                           pInputText 
+                           formControlName="password" 
+                           class="w-full" 
+                           name="password" 
+                           placeholder="Type your password"/>
+                           <small *ngIf="password.invalid && (password.dirty || password.touched)" class="block p-error">
+                            <div *ngIf="password.errors?.['required']">Password is required.</div>
+                            </small>
+                </div>
+                <p-button label="Sign in" styleClass="w-full"[disabled]="loginForm.invalid"></p-button>
+                <div class="mt-2">
+                    Not a member? <a routerLink="/register">Register</a>
+                </div>
+            </p-card>
+        </form>
+    </div>
 </div>
